[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/ARK @somepx/Ark.otf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/alien.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=5]
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=10]
action = "ui_select"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 3
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 84.0
margin_bottom = 48.0
color = Color( 0.780392, 0.941176, 0.847059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 5.49831
margin_top = 3.50057
margin_right = 125.498
margin_bottom = 35.5006
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
custom_colors/font_outline_modulate = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_constants/line_spacing = 0
text = "Hostile
 Terraqueo"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 69.8965, 8.34425 )
frames = SubResource( 6 )
playing = true

[node name="PressSpaceButton" type="Button" parent="."]
margin_left = 14.0
margin_top = 24.0
margin_right = 70.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_color_hover = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.262745, 0.321569, 0.239216, 1 )
shortcut = SubResource( 11 )
text = "Press SPACE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressSpaceTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="CreditLabel" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0794
margin_top = 42.1446
margin_right = 74.0794
margin_bottom = 46.1446
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_colors/font_outline_modulate = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "Game made to Nokia 3310 GameJame"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PressSpaceButton" to="." method="_on_PressSpaceButton_pressed"]
[connection signal="timeout" from="PressSpaceTimer" to="." method="_on_PressSpaceTimer_timeout"]
